src/snapshots/pax__virtual_packages__tests__test_get_minimal_virtual_packages.win-64.snap
---
source: src/virtual_packages.rs
expression: packages
---
[
    Win,
    Archspec(
        Archspec {
            spec: "x86_64",
        },
    ),
]
